clusters/firefly/apps/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett:0.23.17
          ports:
            - containerPort: 9117 # jackett web interface
          volumeMounts:
            - mountPath: /config
              name: jackett
      volumes:
        - name: jackett
          persistentVolumeClaim:
            claimName: jackett
