clusters/firefly/apps/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  namespace: media
spec:
  selector:
    app: jackett
  ports:
    - protocol: TCP
      port: 9117
      targetPort: 9117
  type: ClusterIP
